--- a/index.html
+++ b/index.html
@@ -61,70 +61,98 @@
           return null
         }
 
-        async function add_partner() {
-          const name = document.getElementById('input-partner-name').value
-          const budget = document.getElementById('input-partner-budget').value
-
-          let response = await send_request("/api/partners", "POST", {name: name, budget: budget})
-          location.reload()
-        }
-
-        function add_card(id, name, budget, spent_budget, is_stopped) {
-          let status_txt = 'Активна'
-          let status_cls = 'bg-success'
-          if (is_stopped) {
-            status_txt = 'Остановлена'
-            status_cls = 'bg-danger'
-          }
-
-          document.body.innerHTML += ` 
-          <div class="card" id="`+ id +`">
-            <div class="card-header `+ status_cls +` text-white">`+ status_txt +`</div>
-            <div class="card-body">
-              <h5 class="card-title" id="title-`+ id +`">`+ name +`</h5>
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" id="date-input-`+ id +`" placeholder="ГГГГ-ММ-ДД">
-                <input type="text" class="form-control" id="cashback-input-`+ id +`" placeholder="Кэшбэк">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" onclick="send_cashback(this.id)" type="button" id="send-`+ id +`">Отправить</button>
-                </div>
-              </div>
-              <dl class="row">
-                <dt class="col-sm-3">Бюджет:</dt>
-                <dd class="col-sm-9 partner-budget">`+ budget +`</dd>
-                <dt class="col-sm-3">Потрачено:</dt>
-                <dd class="col-sm-9 partner-spent">`+ spent_budget +`</dd>
-              </dl>
-              <button class="btn btn-warning update-btn" onclick="location.reload()">Обновить</button>
-            </div>
-            <div class="card-footer text-muted">#`+ id +`</div>
-          </div>
-          `
-        }
-
-        async function send_cashback(btn_id) {
-          const id = btn_id.split('-')[1]
+        async function send_cashback(id) {
           const date = document.getElementById('date-input-' + id).value
           const cashback = document.getElementById('cashback-input-' + id).value
           const name = document.getElementById('title-' + id).textContent
 
           const response = await send_request("/api/partners/" + id + "/cashback", "PUT", {date: date + " 00:00:00", cashback: cashback, name: name})
+          if (response != null)
+            update_card(response)
 
-          return response;
+          return response.ok;
         }
 
-        async function load(cid) {
-          const data = await send_request("/api/partners/" + cid);
+        function add_card(partner) {
+          const card_div = `<div class="card" id="`+ partner.id +`"></div>`
+          document.body.innerHTML += card_div
 
-          if (data != null) {
-            add_card(data.id, data.name, data.budget, data.spent_budget, data.is_stopped)
-            return await load(cid+1)
+          update_card(partner) 
+        }
+
+        function update_card(partner) {
+          let status_txt = 'Активна'
+          let status_cls = 'bg-success'
+          if (partner.is_stopped) {
+            status_txt = 'Остановлена'
+            status_cls = 'bg-danger'
           }
 
-          return cid
+          const card = document.getElementById(partner.id)
+
+          card.innerHTML = ` 
+          <div class="card-header `+ status_cls +` text-white">`+ status_txt +`</div>
+          <div class="card-body">
+            <h5 class="card-title" id="title-`+ partner.id +`">`+ partner.name +`</h5>
+            <div class="input-group mb-3">
+              <input type="date" class="form-control" id="date-input-`+ partner.id +`" placeholder="ГГГГ-ММ-ДД">
+              <input type="text" class="form-control" id="cashback-input-`+ partner.id +`" placeholder="Кэшбэк">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" onclick="send_cashback(this.id.split('-')[1])" type="button" id="send-`+ partner.id +`">Отправить</button>
+              </div>
+            </div>
+            <dl class="row">
+              <dt class="col-sm-3">Бюджет:</dt>
+              <dd class="col-sm-9 partner-budget">`+ partner.budget +`</dd>
+              <dt class="col-sm-3">Потрачено:</dt>
+              <dd class="col-sm-9 partner-spent">`+ partner.spent_budget +`</dd>
+            </dl>
+            <button class="btn btn-warning update-btn" id="update-btn-`+ partner.id +`" onclick="update_partner(this.id.split('-')[2])">Обновить</button>
+          </div>
+          <div class="card-footer text-muted">#`+ partner.id +`</div>
+          `
         }
 
-        load(0).then(cid => console.log(cid))
+        async function add_partner() {
+          const name = document.getElementById('input-partner-name').value
+          const budget = document.getElementById('input-partner-budget').value
+
+          const response = await send_request("/api/partners", "POST", {name: name, budget: budget})
+
+          // TODO:
+          // if (response != null)
+          //   add_card(response, true)
+
+          location.reload()
+        }
+
+        async function update_partner(id) {
+          const response = await send_request("/api/partners/" + id)
+
+          if (response != null) {
+            update_card(response)
+            return true
+          }
+
+          return false
+        }
+
+        async function load() {
+          const response = await send_request("/api/partners");
+
+          if (response != null) {
+            const partners = response.partners;
+
+            for (let i = partners.length-1; i >= 0; i--)
+              add_card(partners[i])
+
+            return partners.length
+          }
+
+          return null
+        }
+
+        load().then(amount => console.log(amount))
         
       </script>
     </body>
